9. 서비스 모든 객체에 final 적용